added border around active viz library page

--- a/pages/windspeed.html
+++ b/pages/windspeed.html
@@ -71,7 +71,7 @@
 							    <div class="col-md-6 col-sm-12"> <a href="temperature.html"><img class = "img img-responsive" src="../assets/TemperatureByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
 							    <div class="col-md-6 col-sm-12"> <a href="humidity.html"><img class = "img img-responsive" src="../assets/HumidityByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
 							    <div class="col-md-6 col-sm-12"> <a href="cloudiness.html"><img class = "img img-responsive" src="../assets/CloudinessByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
-							    <div class="col-md-6 col-sm-12"> <a href="windspeed.html"><img class = "img img-responsive" src="../assets/WindSpeedByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
+							    <div class="col-md-6 col-sm-12"> <a href="windspeed.html"><img class = "img img-responsive border border-primary rounded" src="../assets/WindSpeedByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
 							</div>
 					 	</div>
 					</div>
