--- a/pages/temperature.html
+++ b/pages/temperature.html
@@ -68,7 +68,7 @@
 					    	<h6 class="card-subtitle mb-2 text-muted">Click on image below for more details.</h6>
 
 	 						<div class="row">
-							    <div class="col-md-6 col-sm-12"> <a href="temperature.html"><img class = "img img-responsive" src="../assets/TemperatureByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
+							    <div class="col-md-6 col-sm-12"> <a href="temperature.html"><img class = "img img-responsive border border-primary rounded" src="../assets/TemperatureByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
 							    <div class="col-md-6 col-sm-12"> <a href="humidity.html"><img class = "img img-responsive" src="../assets/HumidityByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
 							    <div class="col-md-6 col-sm-12"> <a href="cloudiness.html"><img class = "img img-responsive" src="../assets/CloudinessByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
 							    <div class="col-md-6 col-sm-12"> <a href="windspeed.html"><img class = "img img-responsive" src="../assets/WindSpeedByLatitude.png" style="width:100%; margin: 5px" alt=""></a> </div>
